# EdgePilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
backend/: .env.example
backend/app/: main.py  models.py
backend/tests/: test_analytics_routes.py  test_analytics_service.py  test_auth_routes.py  test_auth_service.py  test_business_routes.py  test_business_service.py  test_etf_seed_service.py  test_execution_import_service.py  test_health.py  test_ingestion_routes.py  test_market_data_provider.py  test_pa_calculator.py  test_pa_routes.py  test_pa_service.py  test_scanner_outcome_service.py  test_scanner_service.py  test_split_domain_services.py  test_strat_service.py  test_tenant_routes.py  test_tenant_service.py  test_validation_routes.py  (+1 more)
docs/: auth0_setup.md  auth_orm_next_steps.md  edgepilot_prd_tdd_implementation_plan_v0_6_advanced_pa_engine.md  etf_rotation_momentum_horizon.md  prd_tdd_v0_9.md  prd_tdd_v1_1.md  prd_tdd_v1_5_1.md  product_strategy_v0_9.md  product_strategy_v1_1.md  product_strategy_v1_5_1.md  provider_adapter_multi_market_readiness.md  railway_deployment.md  release_implementation_plan.md  review_next_steps_deployment_ci_cd.md  trading_assistant_prd_tdd_implementation_plan_v0_3_db_frontend_analytics (1).md  v0_3_execution_roadmap.md  v0_6_review_and_next_steps.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
migrations/: env.py
scripts/: seed_us_etf_pa.py  start_backend.sh  test_execution_import_concurrency.sh
(+188 files in other folders)
