[project]
name = "edgepilot"
version = "0.1.0"
description = "Trading assistant backend scaffold based on v0.3 TDD"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "uvicorn>=0.35.0",
  "pydantic-settings>=2.10.0",
  "pyjwt[crypto]>=2.10.0",
  "psycopg[binary]>=3.2.0",
  "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.setuptools.packages.find]
include = ["backend*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
